Added assistant api
