# build/swagger.json
@@ -6,6 +6,18 @@
 		"requestBodies": {},
 		"responses": {},
 		"schemas": {
+			"HandleUserInputRequest": {
+				"properties": {
+					"userInput": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"userInput"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
 			"IEventResponse": {
 				"properties": {
 					"id": {
@@ -162,6 +174,35 @@
 	},
 	"openapi": "3.0.0",
 	"paths": {
+		"/assistant/user-input": {
+			"post": {
+				"operationId": "HandleUserInput",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"type": "string"
+								}
+							}
+						}
+					}
+				},
+				"security": [],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/HandleUserInputRequest"
+							}
+						}
+					}
+				}
+			}
+		},
 		"/calendar/events": {
 			"get": {
 				"operationId": "GetEvents",
@@ -447,7 +488,7 @@
 	},
 	"servers": [
 		{
-			"url": "https://sb-api.ngrok.app"
+			"url": "https://sb-api.ngrok.app/"
 		}
 	]
 }
